# rustscout

./: .gitignore  .rustscout.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Project Outline.txt  README.md  lcov.info
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: search_benchmarks.rs
docs/: DEVELOPER_GUIDE.md  ROADMAP.md
docs/blog/: 2024-01-hybrid-search.md  2025-01-advanced-search.md  2025-01-context-lines.md  2025-01-incremental-search.md  2025-01-memory-mapping.md  2025-01-memory-metrics-and-parallel.md  2025-01-multi-pattern-replacement.md  2025-01-multiple-patterns.md  2025-01-pattern-caching.md  2025-01-replace-module-enhancements.md  2025-01-replacement-feature.md  2025-01-rustscout-1.0.md  2025-01-word-boundaries.md
rtrace_cli/: Cargo.toml
rtrace_cli/src/: main.rs
rtrace_core/: Cargo.toml
rtrace_core/benches/: search_benchmarks.rs
rtrace_core/src/: config.rs  errors.rs  filters.rs  lib.rs  results.rs  search.rs
rtrace_core/tests/: integration_test.rs
rustscout/: .rustscout.yaml  Cargo.toml
rustscout-cli/: Cargo.toml
rustscout-cli/src/: diff_utils.rs  main.rs
rustscout-cli/tests/: interactive_test.rs
rustscout/benches/: search_benchmarks.rs
rustscout/docs/blog/: 2025-01-memory-metrics.md
rustscout/src/: config.rs  error.rs  errors.rs  filters.rs  lib.rs  metrics.rs  results.rs  search.rs  workspace.rs
rustscout/src/cache/: detector.rs  mod.rs
rustscout/src/replace/: mod.rs  undo_info.rs
rustscout/src/search/: engine.rs  interactive_search.rs  matcher.rs  mod.rs  processor.rs
rustscout/tests/: cli_test.rs  integration_test.rs  workspace_move.rs
scripts/: update_changelog.sh
src/search/: matcher.rs  processor.rs
