[workspace]
members = [
    "rtrace_cli",
    "rtrace_core"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance, cross-platform CLI tool for searching and analyzing codebases"
repository = "https://github.com/yourusername/rtrace"
license = "MIT"
readme = "README.md"
keywords = ["search", "grep", "cli", "regex", "parallel"]
categories = ["command-line-utilities", "development-tools", "text-processing"] 