[package]
name = "rustscout-cli"
version = "0.2.0"
edition = "2021"
description = "High-performance, concurrent code search CLI tool"
license = "MIT"
repository = "https://github.com/willibrandon/rustscout"
documentation = "https://docs.rs/rustscout-cli"
readme = "../README.md"
keywords = ["search", "cli", "regex", "parallel", "filesystem"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "filesystem"]
authors = ["Brandon Williams"]

[dependencies]
rustscout = { path = "../rustscout", version = "0.2.0" }
clap = { version = "4.4", features = ["derive"] } 