[package]
name = "rtrace_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
regex = "1.10"
ignore = "0.4"
num_cpus = "1.16"
glob = "0.3"

[dev-dependencies]
tempfile = "3.9"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmarks"
harness = false
