[package]
name = "rustscout-cli"
version = "0.1.0"
edition = "2021"
description = "High-performance, concurrent code search CLI tool"
license = "MIT"
repository = "https://github.com/willibrandon/rustscout"
documentation = "https://docs.rs/rustscout-cli"
readme = "../README.md"
keywords = ["search", "cli", "regex", "parallel", "filesystem"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "filesystem"]
authors = ["Brandon Williams"]

[dependencies]
rustscout = { path = "../rustscout", version = "0.1.0" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
