[package]
name = "rustscout-cli"
version = "1.1.1"
edition = "2021"
description = "High-performance, concurrent code search CLI tool"
license = "MIT"
repository = "https://github.com/willibrandon/rustscout"
documentation = "https://docs.rs/rustscout-cli"
readme = "../README.md"
keywords = ["search", "cli", "regex", "parallel", "filesystem"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "filesystem"]
authors = ["Brandon Williams"]

[dependencies]
rustscout = { version = "1.1.1", path = "../rustscout" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
num_cpus = "1.16"
itertools = "0.12.0"
ignore = "0.4"
similar = "2.2"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
anyhow = "1.0"
