[package]
name = "rustscout"
version = "1.1.1"
edition = "2021"
description = "High-performance, concurrent code search tool written in Rust"
license = "MIT"
repository = "https://github.com/willibrandon/rustscout"
documentation = "https://docs.rs/rustscout"
readme = "../README.md"
keywords = ["search", "concurrency", "regex", "parallel", "filesystem"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "filesystem"]
authors = ["Brandon Williams"]

[dependencies]
rayon = "1.8"
regex = "1.10"
ignore = "0.4"
num_cpus = "1.16"
glob = "0.3"
config = { version = "0.13", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1.0"
once_cell = "1.20.2"
memmap2 = "0.9.0"
indicatif = "0.17.8"
humantime = "2.1.0"
tempfile = "3.9"
unicode_categories = "0.1.1"
similar = "2.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1.0"

[[bench]]
name = "search_benchmarks"
harness = false
